Fix no scrollbar issue on the website

--- a/WebpageReact/src/App.css
+++ b/WebpageReact/src/App.css
@@ -43,8 +43,8 @@
 
 .App {
   text-align: center;
-  overflow: scroll;
-  scroll-behavior: smooth;
+  /*overflow: hidden;
+  scroll-behavior: smooth;*/
 }
 
 
